# High-Frequency-Trading-System

./: README.md  compose.yaml
simulation/backend/: kafkaconsumer.js  package-lock.json  package.json
simulation/frontend/: package-lock.json
simulation/frontend/src/: App.js
simulation/frontend/src/components/: StockTable.js
stock/: Cargo.toml
stock/order_books/: AGCO.json  AMGN.json  AMZN.json  APPL.json  BAC.json  BP.json  CALM.json  CF.json  COP.json  COST.json  CTVA.json  FMC.json  GOOG.json  HD.json  IBM.json  JPM.json  MOS.json  MS.json  MSFT.json  NKE.json  NVDA.json  OXY.json  PEP.json  PG.json  PSX.json  SBUX.json  SLB.json  SMG.json  TFC.json  TMO.json  TSLA.json  UL.json  USB.json  VLO.json  WFC.json  WMT.json
stock/src/: kafka.rs  log.rs  main.rs  order_book.rs  order_dummy.rs  risk.rs  stock.rs
