[package]
name = "sample_rust_kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.2.0"
rand = "0.8.5"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
rdkafka-sys = "=4.7.0"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.16"
